[gd_scene load_steps=16 format=2]

[ext_resource path="res://main/world/projectile/bullet/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/world/projectile/bullet/track_bullet/track_bullet.gd" type="Script" id=2]
[ext_resource path="res://main/world/projectile/bullet/shuriken/missile.png" type="Texture" id=3]
[ext_resource path="res://main/world/projectile/bullet/track_bullet/missle_explosion.png" type="Texture" id=4]
[ext_resource path="res://main/world/projectile/bullet/beam_bullet/sounds/wall_impact.wav" type="AudioStream" id=5]
[ext_resource path="res://main/world/random_sound_spawner/random_sound_spawner.gd" type="Script" id=6]
[ext_resource path="res://main/shader/unshaded_material.tres" type="Material" id=7]
[ext_resource path="res://main/world/projectile/bullet/beam_bullet/sprites/gun_trail2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7, 2.5 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0585586, 0.457958, 1 )
colors = PoolColorArray( 0.454902, 0.454902, 0.454902, 0, 0.987489, 0.987489, 0.987489, 0.678187, 1, 1, 1, 0.694118, 1, 1, 1, 0 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.36
tracks/0/type = "value"
tracks/0/path = NodePath("Bullet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225, 0.27, 0.315, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "destroy_track"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bullet:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.1, 1.1, 1.1, 1 ), Color( 1.10196, 1.10196, 1.10196, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 64.0

[sub_resource type="CircleShape2D" id=10]
radius = 24.0

[node name="TrackBullet" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 5
script = ExtResource( 2 )
lifespan = 2.5
delay = 0.7
damage = 2.0
speed = 275.0
pierce = 2
add_shooter_speed = false
turn_speed = 4

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 1, -0.5 )
shape = SubResource( 8 )

[node name="WallSounds" type="Node2D" parent="." index="2"]
script = ExtResource( 6 )
sounds = [ ExtResource( 5 ) ]
volume = -19.0
rand_pitch_range = 0.2

[node name="GunTrail" type="CPUParticles2D" parent="." index="3"]
modulate = Color( 2, 2, 2, 1 )
material = ExtResource( 7 )
position = Vector2( 0, 1 )
amount = 24
lifetime = 0.5
speed_scale = 1.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 6.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 54 )
color_ramp = SubResource( 3 )

[node name="Bullet" type="Sprite" parent="." index="4"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
material = ExtResource( 7 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
playback_speed = 2.0
anims/RESET = SubResource( 4 )
anims/destroy = SubResource( 1 )
anims/destroy_track = SubResource( 7 )

[node name="GunTrail2" type="CPUParticles2D" parent="." index="6"]
visible = false
modulate = Color( 2, 2, 2, 1 )
material = ExtResource( 7 )
position = Vector2( -7, 0 )
amount = 16
lifetime = 0.5
speed_scale = 2.25
local_coords = false
texture = ExtResource( 8 )
emission_shape = 1
emission_sphere_radius = 1.25
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.53
color_ramp = SubResource( 3 )

[node name="TrackRange" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackRange" index="0"]
position = Vector2( 0, -0.5 )
shape = SubResource( 9 )

[node name="ExplodeRange" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeRange" index="0"]
shape = SubResource( 10 )
disabled = true

[node name="Explosion" type="Sprite" parent="." index="9"]
visible = false
modulate = Color( 1.2, 1.2, 1.2, 1 )
material = ExtResource( 7 )
texture = ExtResource( 4 )
hframes = 6
